--- a/index.html
+++ b/index.html
@@ -1,7 +1,104 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!-- skel-baseline v3.0.1 | (c) n33 | skel.io | MIT licensed -->
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	<head>
+		<title>Baseline</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body>
+
+		<!-- Header -->
+			<header class="mobile">
+				<a href="#nav"><img src="images/menu.svg" alt="Меню"/></a>
+				<a href="/" class="logo">Things</a>
+				<a href="tel:+74951234567" class="phone"><img src="images/phone.svg" alt="Телефон"/></a>
+			</header>
+			
+			
+			
+		<!-- Nav -->
+			<nav id="nav">
+				<ul class="links">
+					<li><a href="/">Главная</a></li>
+					<li><a href="/catalog/">Каталог</a></li>
+					<li><a href="/tech-info">Тех. инфо</a></li>
+					<li><a href="/faq">FAQ</a></li>
+					<li><a href="/how-to-buy">Как заказать</a></li>
+					<li><a href="/contact">Контакты</a></li>
+				</ul>
+				<ul class="icons">
+					<li><a href="https://www.facebook.com/copperi.ru/"  rel="nofollow" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.instagram.com/copperi.ru/" rel="nofollow" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://www.pinterest.ru/copperi_ru/" rel="nofollow" target="_blank" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
+				</ul>
+			</nav>
+			
+		
+		<!-- Sidebar -->
+			<div id="sidebar">
+				<div class="inner">
+					<a class="logo" href="/">Things</a>
+					<ul class="main-menu">
+						<li><a href="#">Каталог</a></li>
+						<li><a href="#">Текстиль</a></li>
+						<li><a href="#">Керамика</a></li>
+						<li><a href="#">Вещи</a></li>
+						<li><a href="#">Мебель</a></li>
+						<li><a href="#">Свет</a></li>
+					</ul>
+					<ul class="bottom-menu">
+						<li><a href="#">Истории</a></li>
+						<li><a href="#">Доставка</a></li>
+						<li><a href="#">Контакты</a></li>
+					</ul>
+				</div>
+			</div>
+		
+		<!-- Main -->
+			<div id="wrapper">
+				<header class="main">
+					<a href="tel:+74951234567" class="phone">+7(495)123-4567</a>
+				</header>
+			</div>
+
+		<!-- Footer -->
+			<footer id="footer">
+				<div class="container">
+					<div class="row double">
+						<div class="6u 12u$(medium)">
+							<h2>Aliquam Interdum</h2>
+							<p>Ornare interdum nascetur enim lobortis nunc amet placerat pellentesque nascetur in adipiscing. Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan. Justo aliquet massa adipiscing cubilia eu accumsan id. Arcu accumsan faucibus vis ultricies adipiscing ornare ut. Mi accumsan. Justo aliquet massa adipiscing cubilia eu accumsan id lorem ipsum dolor.</p>
+						</div>
+						<div class="3u 6u(medium) 12u$(small)">
+							<h3>Accumsan</h3>
+							<ul class="alt">
+								<li>Nascetur nunc varius commodo.</li>
+								<li>Vis id faucibus montes tempor</li>
+								<li>massa amet lobortis vel.</li>
+								<li>Nascetur nunc varius commodo.</li>
+							</ul>
+						</div>
+						<div class="3u$ 6u$(medium) 12u$(small)">
+							<h3>Faucibus</h3>
+							<ul class="alt">
+								<li>Nascetur nunc varius commodo.</li>
+								<li>Vis id faucibus montes tempor</li>
+								<li>massa amet lobortis vel.</li>
+								<li>Nascetur nunc varius commodo.</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="copyright">
+					&copy; Untitled. All rights reserved.
+				</div>
+			</footer>
+
+		<!-- Scripts -->
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
