--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<div id="sidebar">
 				<div class="inner">
 					<a class="logo" href="/">Things</a>
-					<ul class="main-menu">
+					<ul class="main-menu actions vertical small">
 						<li><a href="#">Каталог</a></li>
 						<li><a href="#">Текстиль</a></li>
 						<li><a href="#">Керамика</a></li>
@@ -48,7 +48,7 @@
 						<li><a href="#">Мебель</a></li>
 						<li><a href="#">Свет</a></li>
 					</ul>
-					<ul class="bottom-menu">
+					<ul class="bottom-menu actions vertical small">
 						<li><a href="#">Истории</a></li>
 						<li><a href="#">Доставка</a></li>
 						<li><a href="#">Контакты</a></li>
@@ -60,7 +60,13 @@
 			<div id="wrapper">
 				<header class="main">
 					<a href="tel:+74951234567" class="phone">+7(495)123-4567</a>
+					<a href="mailto:info@veshi.store">info@veshi.store</a>
 				</header>
+				<div class="container">
+					
+					<h1>Product Name</h1>
+					<p>Ornare interdum nascetur enim lobortis nunc amet placerat pellentesque nascetur in adipiscing. Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan. Justo aliquet massa adipiscing cubilia eu accumsan id. Arcu accumsan faucibus vis ultricies adipiscing ornare ut. Mi accumsan. Justo aliquet massa adipiscing cubilia eu accumsan id lorem ipsum dolor.</p>
+				</div>
 			</div>
 
 		<!-- Footer -->
