--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			
 		<!-- Nav -->
 			<nav id="nav">
+				<a href="/" class="logo">Things</a>
 				<ul class="links">
 					<li><a href="/">Главная</a></li>
 					<li><a href="/catalog/">Каталог</a></li>
@@ -28,79 +29,71 @@
 					<li><a href="/how-to-buy">Как заказать</a></li>
 					<li><a href="/contact">Контакты</a></li>
 				</ul>
-				<ul class="icons">
-					<li><a href="https://www.facebook.com/copperi.ru/"  rel="nofollow" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="https://www.instagram.com/copperi.ru/" rel="nofollow" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="https://www.pinterest.ru/copperi_ru/" rel="nofollow" target="_blank" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
-				</ul>
+				<div>
+					<a href="tel:+74951234567">+7 (495) 123-45-67</a>
+					<ul class="icons">
+						<li><a href="https://www.facebook.com/copperi.ru/"  rel="nofollow" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/copperi.ru/" rel="nofollow" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.pinterest.ru/copperi_ru/" rel="nofollow" target="_blank" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
+					</ul>
+				</div>
 			</nav>
 			
 		
-		<!-- Sidebar -->
-			<div id="sidebar">
-				<div class="inner">
-					<a class="logo" href="/">Things</a>
-					<ul class="main-menu actions vertical small">
-						<li><a href="#">Каталог</a></li>
-						<li><a href="#">Текстиль</a></li>
-						<li><a href="#">Керамика</a></li>
-						<li><a href="#">Вещи</a></li>
-						<li><a href="#">Мебель</a></li>
-						<li><a href="#">Свет</a></li>
-					</ul>
-					<ul class="bottom-menu actions vertical small">
-						<li><a href="#">Истории</a></li>
-						<li><a href="#">Доставка</a></li>
-						<li><a href="#">Контакты</a></li>
-					</ul>
-				</div>
-			</div>
-		
 		<!-- Main -->
+			
 			<div id="wrapper">
-				<header class="main">
-					<a href="tel:+74951234567" class="phone">+7(495)123-4567</a>
-					<a href="mailto:info@veshi.store">info@veshi.store</a>
-				</header>
-				<div class="container">
-					
-					<h1>Product Name</h1>
-					<p>Ornare interdum nascetur enim lobortis nunc amet placerat pellentesque nascetur in adipiscing. Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan. Justo aliquet massa adipiscing cubilia eu accumsan id. Arcu accumsan faucibus vis ultricies adipiscing ornare ut. Mi accumsan. Justo aliquet massa adipiscing cubilia eu accumsan id lorem ipsum dolor.</p>
-				</div>
+				<article>
+					<div class="container">
+						<header>
+							<h1>Каталог</h1>
+						</header>
+						<section class="items">
+							<div class="item"><img class="image fit" src="images/pic54.jpg" /></div>
+							<div class="item"><img class="image fit" src="images/pic54.jpg" /></div>
+							<div class="item"><img class="image fit" src="images/pic54.jpg" /></div>
+							<div class="item"><img class="image fit" src="images/pic54.jpg" /></div>
+							<div class="item"><img class="image fit" src="images/pic54.jpg" /></div>
+							<div class="item"><img class="image fit" src="images/pic54.jpg" /></div>
+						</section>
+						<p>Ornare interdum nascetur enim lobortis nunc amet placerat pellentesque nascetur in adipiscing. Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan. Justo aliquet massa adipiscing cubilia eu accumsan id. Arcu accumsan faucibus vis ultricies adipiscing ornare ut. Mi accumsan. Justo aliquet massa adipiscing cubilia eu accumsan id lorem ipsum dolor.</p>
+					</div>
+				</article>
 			</div>
+			
 
 		<!-- Footer -->
-			<footer id="footer">
-				<div class="container">
-					<div class="row double">
-						<div class="6u 12u$(medium)">
-							<h2>Aliquam Interdum</h2>
-							<p>Ornare interdum nascetur enim lobortis nunc amet placerat pellentesque nascetur in adipiscing. Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan. Justo aliquet massa adipiscing cubilia eu accumsan id. Arcu accumsan faucibus vis ultricies adipiscing ornare ut. Mi accumsan. Justo aliquet massa adipiscing cubilia eu accumsan id lorem ipsum dolor.</p>
-						</div>
-						<div class="3u 6u(medium) 12u$(small)">
-							<h3>Accumsan</h3>
-							<ul class="alt">
-								<li>Nascetur nunc varius commodo.</li>
-								<li>Vis id faucibus montes tempor</li>
-								<li>massa amet lobortis vel.</li>
-								<li>Nascetur nunc varius commodo.</li>
-							</ul>
-						</div>
-						<div class="3u$ 6u$(medium) 12u$(small)">
-							<h3>Faucibus</h3>
-							<ul class="alt">
-								<li>Nascetur nunc varius commodo.</li>
-								<li>Vis id faucibus montes tempor</li>
-								<li>massa amet lobortis vel.</li>
-								<li>Nascetur nunc varius commodo.</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<div class="copyright">
-					&copy; Untitled. All rights reserved.
-				</div>
-			</footer>
+			<!-- <footer id="footer"> -->
+				<!-- <div class="container"> -->
+					<!-- <div class="row double"> -->
+						<!-- <div class="6u 12u$(medium)"> -->
+							<!-- <h2>Aliquam Interdum</h2> -->
+							<!-- <p>Ornare interdum nascetur enim lobortis nunc amet placerat pellentesque nascetur in adipiscing. Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan. Justo aliquet massa adipiscing cubilia eu accumsan id. Arcu accumsan faucibus vis ultricies adipiscing ornare ut. Mi accumsan. Justo aliquet massa adipiscing cubilia eu accumsan id lorem ipsum dolor.</p> -->
+						<!-- </div> -->
+						<!-- <div class="3u 6u(medium) 12u$(small)"> -->
+							<!-- <h3>Accumsan</h3> -->
+							<!-- <ul class="alt"> -->
+								<!-- <li>Nascetur nunc varius commodo.</li> -->
+								<!-- <li>Vis id faucibus montes tempor</li> -->
+								<!-- <li>massa amet lobortis vel.</li> -->
+								<!-- <li>Nascetur nunc varius commodo.</li> -->
+							<!-- </ul> -->
+						<!-- </div> -->
+						<!-- <div class="3u$ 6u$(medium) 12u$(small)"> -->
+							<!-- <h3>Faucibus</h3> -->
+							<!-- <ul class="alt"> -->
+								<!-- <li>Nascetur nunc varius commodo.</li> -->
+								<!-- <li>Vis id faucibus montes tempor</li> -->
+								<!-- <li>massa amet lobortis vel.</li> -->
+								<!-- <li>Nascetur nunc varius commodo.</li> -->
+							<!-- </ul> -->
+						<!-- </div> -->
+					<!-- </div> -->
+				<!-- </div> -->
+				<!-- <div class="copyright"> -->
+					<!-- &copy; Untitled. All rights reserved. -->
+				<!-- </div> -->
+			<!-- </footer> -->
 
 		<!-- Scripts -->
 			<script src="assets/js/skel.min.js"></script>
