--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<!-- Header -->
 			<header class="mobile">
 				<a href="#nav"><img src="images/menu.svg" alt="Меню"/></a>
-				<a href="/" class="logo">Things</a>
+				<a href="/" class="logo">НеВещи</a>
 				<a href="tel:+74951234567" class="phone"><img src="images/phone.svg" alt="Телефон"/></a>
 			</header>
 			
@@ -20,21 +20,21 @@
 			
 		<!-- Nav -->
 			<nav id="nav">
-				<a href="/" class="logo">Things</a>
+				<a href="/" class="logo">НеВещи</a>
 				<ul class="links">
-					<li><a href="/">Главная</a></li>
-					<li><a href="/catalog/">Каталог</a></li>
-					<li><a href="/tech-info">Тех. инфо</a></li>
-					<li><a href="/faq">FAQ</a></li>
-					<li><a href="/how-to-buy">Как заказать</a></li>
-					<li><a href="/contact">Контакты</a></li>
+					<li><a href="#">Все товары</a></li>
+					<li><a href="#">Текстиль</a></li>
+					<li><a href="#">Керамика</a></li>
+					<li><a href="#">Вещи</a></li>
+					<li><a href="#">Свет</a></li>
+					<li><a href="#">Мебель</a></li>
 				</ul>
 				<div>
 					<a href="tel:+74951234567">+7 (495) 123-45-67</a>
 					<ul class="icons">
-						<li><a href="https://www.facebook.com/copperi.ru/"  rel="nofollow" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com/copperi.ru/" rel="nofollow" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://www.pinterest.ru/copperi_ru/" rel="nofollow" target="_blank" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
+						<li><a href="https://www.facebook.com//"  rel="nofollow" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com//" rel="nofollow" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.pinterest.ru//" rel="nofollow" target="_blank" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
 					</ul>
 				</div>
 			</nav>
@@ -45,15 +45,14 @@
 			<div id="wrapper">
 				<article>
 					<div class="container">
-						<header>
-							<h1>Каталог</h1>
+						<header class="main-header">
+							<h1>Каталог <sup>(16)</sup></h1>
 						</header>
 						<section class="items">
 							<div class="item"><img class="image fit" src="images/pic54.jpg" /></div>
+							<div class="item"><img class="image fit" src="images/pic542.jpg" /></div>
 							<div class="item"><img class="image fit" src="images/pic54.jpg" /></div>
-							<div class="item"><img class="image fit" src="images/pic54.jpg" /></div>
-							<div class="item"><img class="image fit" src="images/pic54.jpg" /></div>
-							<div class="item"><img class="image fit" src="images/pic54.jpg" /></div>
+							<div class="item"><img class="image fit" src="images/pic542.jpg" /></div>
 							<div class="item"><img class="image fit" src="images/pic54.jpg" /></div>
 						</section>
 						<p>Ornare interdum nascetur enim lobortis nunc amet placerat pellentesque nascetur in adipiscing. Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan. Justo aliquet massa adipiscing cubilia eu accumsan id. Arcu accumsan faucibus vis ultricies adipiscing ornare ut. Mi accumsan. Justo aliquet massa adipiscing cubilia eu accumsan id lorem ipsum dolor.</p>
