--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<meta name="theme-color" content="#f0f0f0"/>
 	</head>
 	<body>
 
@@ -29,7 +30,13 @@
 					<li><a href="#">Свет</a></li>
 					<li><a href="#">Мебель</a></li>
 				</ul>
+				<ul class="links">
+					<li><a href="#">Истории</a></li>
+					<li><a href="#">Доставка</a></li>
+					<li><a href="#">Контакты</a></li>
+				</ul>
 				<div>
+					
 					<a href="tel:+74951234567">+7 (495) 123-45-67</a>
 					<ul class="icons">
 						<li><a href="https://www.facebook.com//"  rel="nofollow" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
