--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- Header -->
 			<header class="mobile">
 				<a href="#nav"><img src="images/menu.svg" alt="Меню"/></a>
-				<a href="/" class="logo">НеВещи</a>
+				<a href="/" class="logo">Things</a>
 				<a href="tel:+74951234567" class="phone"><img src="images/phone.svg" alt="Телефон"/></a>
 			</header>
 			
@@ -21,7 +21,7 @@
 			
 		<!-- Nav -->
 			<nav id="nav">
-				<a href="/" class="logo">НеВещи</a>
+				<a href="/" class="logo">Things</a>
 				<ul class="links">
 					<li><a href="#">Все товары</a></li>
 					<li><a href="#">Текстиль</a></li>
