--- a/index.html
+++ b/index.html
@@ -23,15 +23,13 @@
 			<nav id="nav">
 				<a href="/" class="logo">Things</a>
 				<ul class="links">
-					<li><a href="#">Все товары</a></li>
-					<li><a href="#">Текстиль</a></li>
-					<li><a href="#">Керамика</a></li>
-					<li><a href="#">Вещи</a></li>
-					<li><a href="#">Свет</a></li>
-					<li><a href="#">Мебель</a></li>
-				</ul>
-				<ul class="links">
-					<li><a href="#">Истории</a></li>
+					<li class="current"><a href="#">Все товары /</a></li>
+					<li class="sub-cat"><a href="#">Текстиль</a></li>
+					<li class="sub-cat"><a href="#">Керамика</a></li>
+					<li class="sub-cat"><a href="#">Вещи</a></li>
+					<li class="sub-cat"><a href="#">Свет</a></li>
+					<li class="sub-cat"><a href="#">Мебель</a></li>
+					<li class="gap"><a href="#">Истории</a></li>
 					<li><a href="#">Доставка</a></li>
 					<li><a href="#">Контакты</a></li>
 				</ul>
@@ -53,7 +51,7 @@
 				<article>
 					<div class="container">
 						<header class="main-header">
-							<h1>Каталог <sup>(16)</sup></h1>
+							<h1>Все товары <sup>(16)</sup></h1>
 						</header>
 						<section class="items">
 							<div class="item"><img class="image fit" src="images/pic54.jpg" /></div>
