--- a/catalog.html
+++ b/catalog.html
@@ -154,30 +154,14 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="container">
-					<div class="row double">
-						<div class="6u 12u$(medium)">
-							<h2>Aliquam Interdum</h2>
-							<p>Ornare interdum nascetur enim lobortis nunc amet placerat pellentesque nascetur in adipiscing. Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan. Justo aliquet massa adipiscing cubilia eu accumsan id. Arcu accumsan faucibus vis ultricies adipiscing ornare ut. Mi accumsan. Justo aliquet massa adipiscing cubilia eu accumsan id lorem ipsum dolor.</p>
-						</div>
-						<div class="3u 6u(medium) 12u$(small)">
-							<h3>Accumsan</h3>
-							<ul class="alt">
-								<li>Nascetur nunc varius commodo.</li>
-								<li>Vis id faucibus montes tempor</li>
-								<li>massa amet lobortis vel.</li>
-								<li>Nascetur nunc varius commodo.</li>
-							</ul>
-						</div>
-						<div class="3u$ 6u$(medium) 12u$(small)">
-							<h3>Faucibus</h3>
-							<ul class="alt">
-								<li>Nascetur nunc varius commodo.</li>
-								<li>Vis id faucibus montes tempor</li>
-								<li>massa amet lobortis vel.</li>
-								<li>Nascetur nunc varius commodo.</li>
-							</ul>
-						</div>
-					</div>
+					<h2>Things</h2>
+					<ul class="alt">
+						<li><i class="fa fa-phone">&nbsp;</i><a href="tel:+7(495)123-45-67"><span itemprop="telephone">+7&nbsp;(495)&nbsp;123-45-67</span></a></li>
+						<li><i class="fa fa-whatsapp">&nbsp;</i><a href="https://wa.me/74951234567"><span>Написать в WhatsApp</span></a></li>
+						<li><i class="fa fa-envelope-o">&nbsp;</i><a href="mailto:info@veshi.ru"><span itemprop="email">info@veshi.ru</span></a></li>
+						<li><div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><i class="fa fa-map-marker">&nbsp;</i><span itemprop="postalCode">111222</span> г. <span itemprop="addressLocality">Москва</span>, <span itemprop="streetAddress">ул. Ленина, д. 5</span></div></li>
+						<li><i class="fa fa-clock-o">&nbsp;</i><data itemprop="openingHours" value="Mo-Fri 10:00−20:00"> Пн-Пт, 10:00-19:00.</data></li>
+					</ul>
 				</div>
 				<div class="copyright">
 					&copy; Untitled. All rights reserved.
