--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
 		<!-- Header -->
 			<header class="mobile">
 				<a href="#nav"><img src="images/menu.svg" alt="Меню"/></a>
-				<a href="/" class="logo">Things</a>
+				<a href="/" class="logo">Вещи</a>
 				<a href="tel:+74951234567" class="phone"><img src="images/phone.svg" alt="Телефон"/></a>
 			</header>
 			
@@ -21,7 +21,7 @@
 			
 		<!-- Nav -->
 			<nav id="nav">
-				<a href="/" class="logo">Things</a>
+				<a href="/" class="logo">Вещи</a>
 				<ul class="links">
 					<li class="current"><a href="#">Все товары /</a></li>
 					<li class="sub-cat"><a href="#">Текстиль</a></li>
@@ -154,7 +154,7 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="container">
-					<h2>Things</h2>
+					<h2 class="logo">Вещи</h2>
 					<ul class="alt">
 						<li><i class="fa fa-phone">&nbsp;</i><a href="tel:+7(495)123-45-67"><span itemprop="telephone">+7&nbsp;(495)&nbsp;123-45-67</span></a></li>
 						<li><i class="fa fa-whatsapp">&nbsp;</i><a href="https://wa.me/74951234567"><span>Написать в WhatsApp</span></a></li>
