--- a/index.html
+++ b/index.html
@@ -1,192 +1,6 @@
-<!DOCTYPE HTML>
-<!-- skel-baseline v3.0.1 | (c) n33 | skel.io | MIT licensed -->
-<html>
-	<head>
-		<title>Baseline</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<meta name="theme-color" content="#f0f0f0"/>
-	</head>
-	<body>
-
-		<!-- Header -->
-			<header class="mobile">
-				<a href="#nav"><img src="images/menu.svg" alt="Меню"/></a>
-				<a href="/" class="logo">Things</a>
-				<a href="tel:+74951234567" class="phone"><img src="images/phone.svg" alt="Телефон"/></a>
-			</header>
-			
-			
-			
-		<!-- Nav -->
-			<nav id="nav">
-				<a href="/" class="logo">Things</a>
-				<ul class="links">
-					<li class="current"><a href="#">Все товары /</a></li>
-					<li class="sub-cat"><a href="#">Текстиль</a></li>
-					<li class="sub-cat"><a href="#">Керамика</a></li>
-					<li class="sub-cat"><a href="#">Вещи</a></li>
-					<li class="sub-cat"><a href="#">Свет</a></li>
-					<li class="sub-cat"><a href="#">Мебель</a></li>
-					<li class="gap"><a href="#">Истории</a></li>
-					<li><a href="#">Доставка</a></li>
-					<li><a href="#">Контакты</a></li>
-				</ul>
-				<div>
-					
-					<a href="tel:+74951234567" class="phone">+7 (495) 123-45-67</a>
-					<ul class="icons">
-						<li><a href="https://www.facebook.com//"  rel="nofollow" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com//" rel="nofollow" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://www.pinterest.ru//" rel="nofollow" target="_blank" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
-					</ul>
-				</div>
-			</nav>
-			
-		
-		<!-- Main -->
-			
-			<div id="wrapper">
-				<article>
-					<div class="container">
-						<header class="main-header">
-							<h1>Все товары <sup>(10)</sup></h1>
-						</header>
-						<section class="items">
-							<div class="item">
-								<a href="#">
-									<img class="image fit" src="images/pic54.jpg" />
-									<div class="caption">
-										<h2>Дизайнерский полотенцесушитель copperi vertebra</h2>
-										<p>112 690 &#8381;</p>
-									</div>
-								</a>
-							</div>
-							<div class="item">
-								<a href="#">
-									<img class="image fit" src="images/pic542.jpg" />
-									<div class="caption">
-										<h2>Дизайнерский полотенцесушитель copperi vertebra</h2>
-										<p>112 690 &#8381;</p>
-									</div>
-								</a>
-							</div>
-							<div class="item">
-								<a href="#">
-									<img class="image fit" src="images/pic54.jpg" />
-									<div class="caption">
-										<h2>Дизайнерский полотенцесушитель copperi vertebra</h2>
-										<p>112 690 &#8381;</p>
-									</div>
-								</a>
-							</div>
-							<div class="item">
-								<a href="#">
-									<img class="image fit" src="images/pic542.jpg" />
-									<div class="caption">
-										<h2>Дизайнерский полотенцесушитель copperi vertebra</h2>
-										<p>112 690 &#8381;</p>
-									</div>
-								</a>
-							</div>
-							<div class="item">
-								<a href="#">
-									<img class="image fit" src="images/pic54.jpg" />
-									<div class="caption">
-										<h2>Дизайнерский полотенцесушитель copperi vertebra</h2>
-										<p>112 690 &#8381;</p>
-									</div>
-								</a>
-							</div>
-							<div class="item">
-								<a href="#">
-									<img class="image fit" src="images/pic542.jpg" />
-									<div class="caption">
-										<h2>Дизайнерский полотенцесушитель copperi vertebra</h2>
-										<p>112 690 &#8381;</p>
-									</div>
-								</a>
-							</div>
-							<div class="item">
-								<a href="#">
-									<img class="image fit" src="images/pic54.jpg" />
-									<div class="caption">
-										<h2>Дизайнерский полотенцесушитель copperi vertebra</h2>
-										<p>112 690 &#8381;</p>
-									</div>
-								</a>
-							</div>
-							<div class="item">
-								<a href="#">
-									<img class="image fit" src="images/pic542.jpg" />
-									<div class="caption">
-										<h2>Дизайнерский полотенцесушитель copperi vertebra</h2>
-										<p>112 690 &#8381;</p>
-									</div>
-								</a>
-							</div>
-							<div class="item">
-								<a href="#">
-									<img class="image fit" src="images/pic54.jpg" />
-									<div class="caption">
-										<h2>Дизайнерский полотенцесушитель copperi vertebra</h2>
-										<p>112 690 &#8381;</p>
-									</div>
-								</a>
-							</div>
-							<div class="item">
-								<a href="#">
-									<img class="image fit" src="images/pic542.jpg" />
-									<div class="caption">
-										<h2>Дизайнерский полотенцесушитель copperi vertebra</h2>
-										<p>112 690 &#8381;</p>
-									</div>
-								</a>
-							</div>
-						</section>
-						
-					</div>
-				</article>
-			</div>
-			
-
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="container">
-					<div class="row double">
-						<div class="6u 12u$(medium)">
-							<h2>Aliquam Interdum</h2>
-							<p>Ornare interdum nascetur enim lobortis nunc amet placerat pellentesque nascetur in adipiscing. Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan. Justo aliquet massa adipiscing cubilia eu accumsan id. Arcu accumsan faucibus vis ultricies adipiscing ornare ut. Mi accumsan. Justo aliquet massa adipiscing cubilia eu accumsan id lorem ipsum dolor.</p>
-						</div>
-						<div class="3u 6u(medium) 12u$(small)">
-							<h3>Accumsan</h3>
-							<ul class="alt">
-								<li>Nascetur nunc varius commodo.</li>
-								<li>Vis id faucibus montes tempor</li>
-								<li>massa amet lobortis vel.</li>
-								<li>Nascetur nunc varius commodo.</li>
-							</ul>
-						</div>
-						<div class="3u$ 6u$(medium) 12u$(small)">
-							<h3>Faucibus</h3>
-							<ul class="alt">
-								<li>Nascetur nunc varius commodo.</li>
-								<li>Vis id faucibus montes tempor</li>
-								<li>massa amet lobortis vel.</li>
-								<li>Nascetur nunc varius commodo.</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<div class="copyright">
-					&copy; Untitled. All rights reserved.
-				</div>
-			</footer>
-
-		<!-- Scripts -->
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
-</html>
+---
+title: Вещи - магазин дизайнерской мебели и аксуссуаров
+description: 
+layout: generic
+permalink: /
+---
