--- a/product.html
+++ b/product.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<meta name="theme-color" content="#f0f0f0"/>
+		<meta name="theme-color" content="#efefee"/>
 	</head>
 	<body>
 
